--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,66 +1,14 @@
 @import 'vars';
 @import 'mixins';
+@import 'header';
+@import 'footer';
+@import 'utilities';
+@import 'info-section';
 
 @include main;
 
-.mt-c-header {
-    display: flex;
-    flex-direction: column;
-}
-
-.mt-c-header__logo {
-        display: flex;
-        justify-content: center;
-
-    .mt-c-header__img {
-        display: inline-block;
-            
-        img {
-            width: 4rem;
-        }
-    }
-
-    .mt-c-header__name {
-        display: inline-block;
-        padding-top: 1rem;
-        padding-left: 1rem;
-
-        h4 {          
-            font-size: 1.3rem;
-            color: $head-col;
-        }
-
-        h5 {
-            font-size: 0.8rem;
-            text-transform: uppercase;
-            color: $font-col;
-        }
-    }
-}
-
-.mt-c-header__menu {
-        display: flex;
-        padding-left: 8rem;
-        border-top: 1px solid $light-grey;
-            
-        a {
-            text-decoration: none;
-            display: inline-block;
-            padding: 1rem 0;
-            margin: 0 1rem;
-            font-size: 0.8rem;
-            color: $head-col;
-
-            &:hover {
-                color: $red-col;
-                border-bottom: 2px solid $red-col;
-        }
-
-    }
-}
-
 .mt-c-consultancy {
-    background: url("../Images/consultancy.jpg");
+    background: url("../images/consultancy.jpg");
     background-size: cover;
     padding: 18rem 10rem;
 
@@ -205,10 +153,6 @@ hr {
     flex-direction: row;
 }
 
-.mt-u-solutions-section__column {
-    padding: 0 2rem;
-}
-
 .mt-c-solutions-section-column--first {
     background-color: $red-col;
     padding: 2rem;
@@ -303,96 +247,5 @@ h2 {
     }
 }
 
-.mt-l-info-section {
-    display: flex;
-    padding: 1rem 10rem;
-    margin-top: 4rem;
-    background: $light-blue;
-}
 
-.mt-u-info-section__part {
-    width: 50%;
-}
-
-.mt-c-info-section-part--left {
-    h4 {
-        font-size: 1.2rem;
-        margin: 2rem 0;
-    }
-
-    img {
-        width: 1.5rem;
-    }
-}
-
-.mt-c-info-section-part--right {
-
-    h5 {
-        font-size: 1rem;
-        text-transform: uppercase;
-        font-size: 1rem;
-        padding: 2rem 0;
-
-    }
-
-    div {
-        border: 1px solid $light-grey;
-        
-        p {
-            display: inline;
-            color: $section-font;
-            font-size: 1rem;
-            line-height: 2.6rem;
-            margin-left: 1rem;
-            font-size: 0.8rem;
-            
-        }   
-
-        a {
-            font-size: 0.8rem;
-            float: right;
-            text-decoration: none;
-            padding: 0.8rem 1.8rem;
-            color: $white-col;
-            background: $red-col;
-            font-weight: bold;
-        }
-    }
-}
-
-footer {
-    background: $light-blue;
-    padding: 2rem 10rem;
-
-    p {
-        float: left;
-        font-size: 0.7em;
-        color: $section-font;
-    }
-
-    nav {
-        float: left;
-        padding-left: 4rem;
-
-        ul {
-
-            li {
-                display: inline-block;
-                transform: skew(-20deg);
-                border-right: 1px solid $light-grey;
-            }
-        }   
-
-        a {
-            display: inline-block;
-            transform: skew(20deg); 
-            text-decoration: none;
-            font-size: 0.8rem;
-            padding: 0 0.5rem;
-            color: $section-font;
-           
-        }
-    }
-
-}
 
