--- a/css/main.css
+++ b/css/main.css
@@ -273,4 +273,30 @@ h2 {
     margin-bottom: 1rem;
     font-size: 0.8rem; }
 
+@media (max-width: 1250px) {
+  .mt-l-stats-section {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 4rem; }
+    .mt-l-stats-section .mt-c-stats-section__column {
+      width: 100%; }
+    .mt-l-stats-section .mt-c-stats-section-column--first {
+      order: 3;
+      width: 100%; }
+      .mt-l-stats-section .mt-c-stats-section-column--first h3, .mt-l-stats-section .mt-c-stats-section-column--first ul {
+        text-align: center; }
+      .mt-l-stats-section .mt-c-stats-section-column--first li {
+        display: inline-block;
+        padding-right: 1rem; }
+
+  .mt-c-stats-section-column--third {
+    margin-top: 3rem;
+    text-align: center;
+    margin-bottom: 2rem; }
+    .mt-c-stats-section-column--third img {
+      width: 60%; }
+
+  .mt-l-expertise-section {
+    padding: 2rem 10rem 0; } }
+
 /*# sourceMappingURL=main.css.map */
