--- a/scss/main.scss
+++ b/scss/main.scss
@@ -288,7 +288,11 @@ h2 {
     .mt-l-expertise-section {
         padding: 2rem 10rem 0;
     }
-        
+
+    .mt-c-info-section-part--right {
+        margin-left: 3rem;
+    }
+    
     footer {
         nav {
             display: none;
