--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,7 @@
       border-bottom: 2px solid #ff0000; }
 
 footer {
+  display: flex;
   background: #edf1f8;
   padding: 2rem 10rem; }
   footer p {
@@ -44,7 +45,7 @@ footer {
     font-size: 0.7em;
     color: #003d66; }
   footer nav {
-    float: left;
+    display: flex;
     padding-left: 4rem; }
     footer nav ul li {
       display: inline-block;
@@ -298,11 +299,11 @@ h2 {
   .mt-c-info-section-part--right {
     margin-left: 3rem; }
 
-  footer nav {
-    display: none; }
-  footer p {
-    float: none;
-    text-align: center; } }
+  footer {
+    flex-direction: row; }
+    footer p {
+      float: none;
+      text-align: center; } }
 @media (max-width: 820px) {
   .mt-c-header__menu {
     padding: 0;
