--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+    display: flex;
     background: $light-blue;
     padding: 2rem 10rem;
 
@@ -9,7 +10,7 @@ footer {
     }
 
     nav {
-        float: left;
+        display: flex;
         padding-left: 4rem;
 
         ul {
