--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,24 +1,41 @@
 .mt-c-footer {
     display: flex;
-    background: $light-blue;
+    background: $color-background;
     padding: 2rem 10rem;
+
+    @media screen and (max-width: $mt-screen-tablet) {
+        flex-direction: row;
+    }
 
     p {
         float: left;
         font-size: 0.7em;
-        color: $section-font;
+        color: $color-main-font;
+
+        @media screen and (max-width: $mt-screen-tablet) {
+            float: none;
+            text-align: center;
+        }
+
+        @media screen and (max-width: $mt-screen-mobile) {
+            float: none;
+        }
     }
 
     nav {
         display: flex;
         padding-left: 4rem;
 
+        @media screen and (max-width: $mt-screen-mobile) {
+            float: none;
+        }
+
         ul {
 
             li {
                 display: inline-block;
                 transform: skew(-20deg);
-                border-right: 1px solid $light-grey;
+                border-right: 1px solid $color-border;
             }
         }   
 
@@ -28,7 +45,7 @@
             text-decoration: none;
             font-size: 0.8rem;
             padding: 0 0.5rem;
-            color: $section-font;
+            color: $color-main-font;
            
         }
     }
