--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,13 +1,18 @@
-$red-col: #ff0000;
-$back-col: #f0f0f5;
-$head-col: #00001a;
-$font-col: #b3b3b3;
-$light-grey: #d3d3d3;
-$light-blue: #edf1f8;
-$white-col: #fff;
-$section-font: #003d66;
+// colors
 
-$font-fam: 'Encode Sans Semi Expanded', sans-serif;
+$color-primary: #ff0000;
+$color-heading: #00001a;
+$color-logo-grey: #b3b3b3;
+$color-border: #d3d3d3;
+$color-background: #edf1f8;
+$color-white-font: #fff;
+$color-main-font: #003d66;
 
-$tablet: "(max-width: 1250px)";
-$mobile: "(max-width: 820px)";
+// fonts
+
+$main-font: 'Encode Sans Semi Expanded', sans-serif;
+
+// media query-s
+
+$mt-screen-tablet: 1280px;
+$mt-screen-mobile: 768px;
